@@ -1,5 +1,8 @@
 2014-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* epa.texi (Caching Passphrases): Don't give argument to @item used in
+	@enumerate section so as to be able to be formatted with MAKEINFO=no.
+
 	* infohack.el (texinfo-format-comma): Support @comma.
 	(infohack-replace-unsupported): New function.
 	(infohack): Use it.
